new methods and fields